Revert "fix: hide chevron on mobile for nav's other than docs (#140)"
This reverts commit 4e2fbafdcb2a983a9f5ce216b691cf64d703fd2b.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -886,11 +886,6 @@ nav.menu {
     font-weight: var(--ifm-font-weight-bold);
   }
 
-  .navbar-sidebar__item .menu__link.hide-chevron.hide-chevron::after {
-    background: none;
-    content: none;
-  }
-
   .navbar-sidebar__item .menu__link:not(.header-button):after {
     content: "";
     display: block;
